--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,46 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core:
+  firebase_auth:
+  firebase_analytics:
+  firebase_storage:
+  cloud_firestore: ^5.6.5
+  dio: ^5.7.0
+  fluttertoast: ^8.2.6
+  url_strategy: ^0.2.0
+  shared_preferences: ^2.3.3
+  flutter_localization: ^0.2.2
+  dotted_border: ^2.1.0
+  flutter_scroll_shadow: ^1.2.4
+  intl: 0.20.2
+  dropdown_button2:
+  drag_and_drop_lists: ^0.4.2
+  shimmer: ^3.0.0
+  simple_shadow: ^0.3.1
+  time_picker_spinner: ^1.0.0
+  image_picker_web: ^4.0.0
+  get_it: ^8.0.3
+  file_picker: ^8.1.7
+  fl_chart: ^0.69.2
+  flutter_quill: ^11.4.1
+  url_launcher: ^6.3.1
+  animated_toggle_switch: ^0.8.4
+  percent_indicator: ^4.2.3
+  syncfusion_flutter_pdfviewer: ^29.2.9
+  just_audio: ^0.9.43
+  audio_session: ^0.1.23
+  flutter_datetime_picker_plus: ^2.2.0
+  flutter_fancy_tree_view: ^1.6.0
+  image_picker: ^1.1.2
+  video_player: ^2.9.3
+  url_launcher_web: ^2.3.3
+  universal_html: ^2.2.4
+  calendar_view: ^1.4.0
+  flutter_video_thumbnail_plus: ^1.0.5
+  pdfjs: ^2.12.9
+  go_router: ^14.6.1
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +96,47 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: Afacad
+      fonts:
+        - asset: assets/fonts/Afacad-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Afacad-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Afacad-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Afacad-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Afacad-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Afacad-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Afacad-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Afacad-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Afacad-Black.ttf
+          weight: 900
+    - family: NotoSans
+      fonts:
+        - asset: assets/fonts/NotoSans-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/NotoSans-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/NotoSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/NotoSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSans-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NotoSans-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/NotoSans-Black.ttf
+          weight: 900
 
   # To add assets to your application, add an assets section, like this:
   # assets:
