--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/images/logo/
+    - assets/images/icons/
+    - assets/images/icons/profile_icon/
   fonts:
     - family: Afacad
       fonts:
