--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_webrtc: ^1.2.0
   http: ^1.5.0
+  web_socket_channel: ^3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
