--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   flutter_webrtc: ^1.2.0
   http: ^1.5.0
   web_socket_channel: ^3.0.3
+  speech_to_text: ^6.6.0
 
 dev_dependencies:
   flutter_test:
