--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   http: ^1.5.0
   web_socket_channel: ^3.0.3
   speech_to_text: ^6.6.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
