--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   speech_to_text: ^6.6.0
   cached_network_image: ^3.4.1
   image: ^4.5.4
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
